data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3710.wast
;; 9. **Test 9: Try-Catch Result Type Mismatch**:    - **Test Description**: Implement a try-catch block where the call within the try block has a return type differing from the expected catch block type.    - **Constraint**: Ensure that the result types between try and catch blocks are consistent, even with function calls.    - **Type Mismatch**: The type inconsistency due to the call should trigger an error.

(assert_invalid
  (module
    (func $throwError (result i32)
      (i32.const 1)
    )
    (func $handleError
      (try (result i64)
        (do (call $throwError))
        (catch (i64.const 0))
      )
    )
  )
  "type mismatch"
)